# philapy

./: README.md  config.yaml  pyproject.toml
.github/workflows/: main.yml  release.yml
philapy/: cli.py  dataclass.py  helpers.py  main.py  messager.py  phi_dataclasses.py  redis_handler.py  scrapper.py
philapy/unittests/: test_dataclass.py  test_helpers.py  test_messager.py  test_phi_dataclasses.py  test_redis_handler.py  test_scrapper.py
